--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,7 @@
                         <option value=""></option>
                         <option value="1">filtro 1</option>
                     </select>
-                    <a href="new_task.html" class="btn btn-primary"><i class="fa-solid fa-plus me-2"></i>Nova tarefa</a>
+                    <button class="btn btn-primary" id="btn_new_task" ><i class="fa-solid fa-plus me-2"></i>Nova tarefa</button>
                 </div>
             </div>
             <hr class="my-3">
