--- a/frontend/new_task.html
+++ b/frontend/new_task.html
@@ -32,6 +32,7 @@
                     <a href="index.html" class="btn btn-secondary">Cancelar</a>
                     <button class="btn btn-primary" id="btn_guardar">Guardar</button>
                 </div>
+                <div class="text-center alert alert-danger p-2 mt-3 d-none" id="error"></div>
             </div>
         </div>
 
@@ -50,5 +51,6 @@
     </div>
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/new_task.js"></script>
 </body>
 </html>
