--- a/frontend/delete_task_meu_codigo.html
+++ b/frontend/delete_task_meu_codigo.html
@@ -24,13 +24,13 @@
         <!-- espaço para criar nova tarefa -->
         <div class="row">
             <div class="col">
-                <h3>Editar tarefa</h3>
+                <h3>Deletar tarefa</h3>
                 <div class="mb-3">
                     <input type="text" id="text_task_text" class="form-control" maxlength="100" placeholder="Digite a tarefa" value="">
                 </div>
                 <div class="text-center">
                     <a href="index.html" class="btn btn-secondary">Cancelar</a>
-                    <button class="btn btn-primary" id="btn_atualizar">Atualizar</button>
+                    <button class="btn btn-danger" id="btn_deletar">Deletar</button>
                 </div>
                 <div class="text-center alert alert-danger p-2 mt-3 d-none" id="error"></div>
             </div>
@@ -51,6 +51,6 @@
     </div>
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/edit_task.js"></script>
+    <script src="assets/js/delete_task_meu_codigo.js"></script>
 </body>
 </html>
