--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,8 +22,11 @@
             <div class="col text-end">
                 <div class="d-flex justify-content-end">
                     <select id="select_filter" class="form-select me-3 w-50">
-                        <option value=""></option>
-                        <option value="1">filtro 1</option>
+                        <option value="all">Todas tarefas</option>
+                        <option value="new">Novas tarefa</option>
+                        <option value="in progress">Tarefas em progresso</option>
+                        <option value="canceled">Tarefas canceladas</option>
+                        <option value="done">Tarefas concluidas</option>
                     </select>
                     <button class="btn btn-primary" id="btn_new_task" ><i class="fa-solid fa-plus me-2"></i>Nova tarefa</button>
                 </div>
