--- a/frontend/delete_task.html
+++ b/frontend/delete_task.html
@@ -24,22 +24,15 @@
         <!-- espaço para criar nova tarefa -->
         <div class="row">
             <div class="col">
-                <h3>Editar tarefa</h3>
-                <div class="mb-3">
-                    <input type="text" id="text_task_text" class="form-control" maxlength="100" placeholder="Digite a tarefa" value="">
-                </div>
+                <h3>Deletar tarefa</h3>
+                <h2 class="text-center text-info mb-3" id="task_text"></h2>
+                <h4 class="text-center mb-5" id="task_status">[status]</h4>
                 <div class="text-center">
                     <a href="index.html" class="btn btn-secondary">Cancelar</a>
-                    <button class="btn btn-primary" id="btn_atualizar">Atualizar</button>
+                    <button class="btn btn-primary" id="btn_deletar">Deletar</button>
                 </div>
-                <div class="text-center alert alert-danger p-2 mt-3 d-none" id="error"></div>
             </div>
         </div>
-
-
-
-
-
 
         <!-- footer -->
         <div class="row mt-3">
@@ -51,6 +44,6 @@
     </div>
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/edit_task.js"></script>
+    <script src="assets/js/delete_task.js"></script>
 </body>
 </html>
